--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GuaraMix</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
-
+<h1>kkkk</h1>
 
 </body>
 </html>
