--- a/index.html
+++ b/index.html
@@ -7,8 +7,40 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <nav class="navbar">
+           <div class="logo">
+            <h1>LOGO</h1>
+           </div>
+
+           <div class="menu">
+            
+            <a href="#">Home</a>
+            <a href="#">Sobre Nós</a>
+            <a href="#">Serviços</a>
+            <a href="#">Fale conosco</a>
+
+           </div>
+        </nav>
+
+
+
     
-<h1>kkkk</h1>
+
+    <main>
+
+
+
+
+    </main>
+
+
+
+
+    <footer>
+
+
+
+    </footer>
 
 </body>
 </html>
