--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 <div class="card" >
                     <img src="berry.png" alt="#">
                     <h3>Guaraná + Açaí</h3>
-                    <p>Unir o Guaraná amazônico com o açaí, uma fruta antioxidante, proporciona uma explosão de sabores e benefícios para a saúde. Esta combinação é ideal para quem procura uma bebida revigorante com um toque tropical e nutritivo.</p>
+                    <p>Unir o Guaraná amazônico com o açaí, uma fruta antioxidante, proporciona uma explosão de sabores e benefícios para a saúde, combinação é ideal para quem procura uma bebida revigorante com um toque tropical e nutritivo.</p>
                 </div>
                 <div class="card">
                     <img src="bananas.png" alt="#">
                     <h3>Guaraná + Banana</h3>
-                    <p>A fusão do Guaraná amazônico com a doçura natural da banana resulta em uma mistura equilibrada entre energia e sabor frutado. Esta combinação é perfeita para quem busca uma bebida revigorante e reconfortante, com um toque naturalmente adocicado.</p>
+                    <p>A fusão do Guaraná amazônico com a doçura natural da banana resulta em uma mistura equilibrada entre energia e sabor frutado, combinação é perfeita para quem busca uma bebida revigorante e reconfortante.</p>
                 </div>
             </div>
 
