--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="bloco1">
                 <h3 style=" letter-spacing: 12px; font-size: 15px;" >Bem-vindo ao mundo encantador da</h3>
                 <h2 class="marca">GuaraMix</h2>
-                <p>GuaraMix: Mais do que uma loja, uma experiência de compras inesquecível. Estamos ansiosos para recebê-lo em nossa loja!</p>
+                <p class="frase" >GuaraMix: Mais do que uma loja, uma experiência de compras inesquecível. Estamos ansiosos para recebê-lo em nossa loja!</p>
                 <a class="fale-conosco" target="_blank" href="https://api.whatsapp.com/send?phone=5598985874720&text=Ol%C3%A1,%20%C3%A9%20aqui%20onde%20tem%20guaran%C3%A1%20de%20qualidade%20?%F0%9F%98%8D">Fale conosco</a>
             </div>
 
@@ -42,7 +42,7 @@
                 <div class="card" >
                     <img src="maracujá.png" alt="#">
                     <h3>Guaraná + Maracujá</h3>
-                    <p>A combinação de Guaraná da Amazônia com maracujá cria uma fusão tropical e refrescante. A mistura resulta em uma bebida exótica e revigorante, perfeita para quem busca uma experiência vibrante e saborosa.</p>
+                    <p>A combinação de Guaraná da Amazônia com maracujá cria uma fusão tropical e refrescante. Mistura resulta em uma bebida exótica e revigorante, perfeita para quem busca uma experiência vibrante e saborosa.</p>
                   
                 </div>
                 <div class="card" >
