--- a/index.html
+++ b/index.html
@@ -57,16 +57,21 @@
                 </div>
             </div>
 
-    <footer class="rodape">
-        <h1>Dúvidas Frequentes</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora vel praesentium illo esse earum.
-        </p>
-
-
-        
-
-
-        <h3><img src="©" alt="#">Termos e condições</h3>
+    <footer>
+        <div class="rodape">
+            <h1>Dúvidas Frequentes</h1>
+                <h2 class="d1">Qual a origem do guaraná</h2>
+                    <p>O guaraná tem origens nas florestas tropicais da Amazônia, onde é cultivado e usado por comunidades indígenas há séculos.</p>
+                <h2 class="d2">Como pedir meu GuaraMix ?</h2>
+                    <p>Para pedir seu GuaraMix, visite nossa loja online, adicione os produtos desejados ao carrinho e siga as instruções de checkout.</p>
+                <h2 class="d3">Tem frete ?</h2>
+                    <p>O custo do frete varia de acordo com a sua localização. Ao finalizar a compra, você verá as opções de frete disponíveis e os custos associados.</p>
+                <h2 class="d4">Qual o melhor sabor ?</h2>
+                    <p>O GuaraMix oferece uma variedade de sabores para todos os gostos. Experimente diferentes opções e descubra o seu preferido, seja frutado, cítrico ou clássico.</p>
+                <h2 class="d5">Onde comprar prensecialmente ?</h2>
+                    <p>Você pode comprar GuaraMix pessoalmente em nossa loja física localizada em [endereço].Visite-nos para uma experiência única de compra.</p>
+             <h3 class="termos">© Termos e condições de uso</h3>
+        </div>
     </footer>
     
 </body>
