--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
            </div>
 
            <div class="menu">
-            <a href="#">Home</a>
-            <a href="#">Sobre Nós</a>
+            <a href="#">Sobre nós</a>
             <a href="#">Serviços</a>
-            <a id="entrar" href="#">Entrar</a>
+            <a href="#">criar conta</a>
+            <a id="entrar" href="entrar.html" >Entrar</a>
            </div>
     </nav>
 
