--- a/entrar.html
+++ b/entrar.html
@@ -9,32 +9,37 @@
 <body class="body2">
       <div class="caixa1" >
           <div class="caixa2">
-               <img src="#" alt="#">
+               <!-- <h1 class="logo2">GuaraMix</h1> -->
+               <img class="imagem" src="undraw_Chef_cu0r (1).png" alt="#">
           </div>
           <div class="caixa3">
                <div>
-                    <h1>cadastro</h1>
+                    <h1 class="texto3">Falta pouco para matar sua fome!</h1>
                </div>
                <div>
                     <form action="#">
                          <div class="forms" >
-                              <label for="inome">Nome</label>
-                              <input type="text" name="nome" id="inome">
+                              <label for="inome">Nome</label> <br>
+                              <input type="text" name="nome" id="inome" placeholder="seu nome completo">
                          </div>
                          <div class="forms">
-                              <label for="isobrenome">Sobrenome</label>
-                              <input type="text" name="sobrenome" id="isobrenome">
+                              <label for="ie-mail">E-mail</label> <br>
+                              <input type="text" name="e-mail" id="ie-mail" placeholder="email@email.com.br">
                          </div>
                          <div class="forms">
-                              <label for="number">número</label>
-                              <input type="number" name="numero" id="number">
+                              <label for="number">Celular</label> <br>
+                              <input type="number" name="numero" id="number" placeholder="(00) 00000-0000 ">
+                         </div>
+
+                         <div>
+                              <input  class="button" type="button" value="Continuar">
                          </div>
                     </form>
                </div>
-               
+
           </div>
       </div>
-     
+
 
 </body>
 </html>
