--- a/entrar.html
+++ b/entrar.html
@@ -20,15 +20,15 @@
                     <form action="#">
                          <div class="forms" >
                               <label for="inome">Nome</label> <br>
-                              <input type="text" name="nome" id="inome" placeholder="seu nome completo">
+                              <input class="input" type="text" name="nome" id="inome" placeholder="seu nome completo">
                          </div>
                          <div class="forms">
                               <label for="ie-mail">E-mail</label> <br>
-                              <input type="text" name="e-mail" id="ie-mail" placeholder="email@email.com.br">
+                              <input  class="input"  type="text" name="e-mail" id="ie-mail" placeholder="email@email.com.br">
                          </div>
                          <div class="forms">
                               <label for="number">Celular</label> <br>
-                              <input type="number" name="numero" id="number" placeholder="(00) 00000-0000 ">
+                              <input  class="input"  type="number" name="numero" id="number" placeholder="(00) 00000-0000 ">
                          </div>
 
                          <div>
